--- a/views/default/showImages.html
+++ b/views/default/showImages.html
@@ -13,7 +13,7 @@
 {{for h in range(0,project.height):}}
     {{for w in range(0,project.width):}}
         {{num=(h*project.height+w)}}
-        {{if index<len(images) and images[index].num == num:}}
+        {{if (not (index>=len(images))) and images[index].num == num:}}
             {{=DIV(A(IMG(_src=URL('download', args=images[index].file),_width='100',_height='100' ),_href=URL("show",vars=dict(projectId=project.id, num=num)),_class='drag'), _class='drop', _id=str(num))}}
              {{index=index+1}}
         {{else:}}
@@ -23,7 +23,26 @@
     <br>
 {{pass}}
 </div>
-
+<h4>
+    Comments
+</h4>
+{{for comment in comments:}}
+<div>
+     <b>
+        On {{=comment.created_on}}
+        {{if comment.created_by == None :}}
+           <em> Default</em>
+        {{else:}}
+           <em> {{=comment.created_by.first_name}} {{=comment.created_by.last_name}}</em>
+        {{pass}}
+         said
+         <i>{{=comment.body}}</i>
+      </b>
+</div>
+{{pass}}
+<div align="left">
+    {{=form}}
+</div>
 
 <script type="text/javascript">
 $(document).ready(function() {
