--- a/views/default/index.html
+++ b/views/default/index.html
@@ -32,7 +32,11 @@
           <div class="panel-body"></div>
         </div>
       </div>
+     {{if currUser == None:}}
+      <div class="panel panel-default" style="visibility: hidden">
+     {{else:}}
       <div class="panel panel-default">
+     {{pass}}
         <div class="panel-heading">
           <h4 class="panel-title">
             <a data-toggle="collapse" data-parent="#accordion" href="#renderList2">
@@ -43,7 +47,11 @@
           <div class="panel-body"></div>
         </div>
       </div>
+{{if currUser == None:}}
+      <div class="panel panel-default" style="visibility: hidden">
+     {{else:}}
       <div class="panel panel-default">
+     {{pass}}
         <div class="panel-heading">
           <h4 class="panel-title">
             <a data-toggle="collapse" data-parent="#accordion" href="#renderList3">
@@ -54,6 +62,7 @@
           <div class="panel-body">.</div>
         </div>
       </div>
+          {{pass}}
     </div>
 
 
