--- a/views/default/crop.html
+++ b/views/default/crop.html
@@ -5,14 +5,14 @@
 </head>
 <h1 style="text-align:center">Please crop your image now</h1>
 <div style="text-align:center">
-<img src="{{=URL('download', args=image)}}" id="imageCrop"/>
+<img src="{{=URL('download', args=image.file)}}" id="imageCrop"/>
 
 </div>
 <INPUT type="hidden" id="x" name = "x" value="0"/>
 <INPUT type="hidden" id="x2" name = "x2" value="0"/>
 <INPUT type="hidden" id="y" name = "y" value="0"/>
 <INPUT type="hidden" id="y2" name = "y2" value="0"/>
-<INPUT type="hidden" id="img" name = "img" value="0"/>
+<INPUT type="hidden" id="img" name = "img" value="{{=image.id}}"/>
 <INPUT type="button" value="submit"
        onclick="ajax('{{=URL('crop_image')}}',['x', 'x2', 'y', 'y2', 'img'],'target');"/>
 <script language="Javascript">
@@ -42,6 +42,5 @@ $(function(){
 
 });
 
-    $('#button').click(function(){
-});
+
 </script>
