minor styling changes

--- a/views/default/index.html
+++ b/views/default/index.html
@@ -19,7 +19,7 @@
 
 {{end}}
 <body>
-    <h4>{{=A('+ Create New Project', _href=URL("createProject"))}}</h4>
+    <h4 class="titleStuff">{{=A('+ Create New Project', _href=URL("createProject"))}}</h4>
     <div class="panel-group" id="accordion">
       <div class="panel panel-default">
         <div class="panel-heading">
