--- a/static/css/style.css
+++ b/static/css/style.css
@@ -34,3 +34,30 @@ img {
 div{
 
 }
+
+.item{
+	font-family: monospace;
+	font-size: 24px;
+	font-style: normal;
+	font-variant: normal;
+	font-weight: 500;
+	line-height: 26.4px;
+	text-decoration:underline;
+}
+
+li a img{
+	border: 3px solid black;
+}
+
+.titleStuff{
+font-family: monospace;
+	font-weight:bold !important;
+	font-size:25px !important;
+	font-style:italic;
+}
+
+h4 a{
+font-size: 14px;
+}
+
+
