--- a/views/default/index.html
+++ b/views/default/index.html
@@ -80,17 +80,23 @@
         var unAuthArr = new Array();
         var pubArr = new Array();
         var authProjs = {{=XML(authorizedProjects)}};
+        var authProjsIm = {{=XML(authorizedProjectsIm)}};
         var unAuthProjs = {{=XML(unAuthProjects)}};
+        var unAuthProjsIm = {{=XML(unAuthProjectsIm)}};
         var pubProjs = {{=XML(pubProjects)}};
-         var pubProjsIm = {{=XML(pubProjectsIm)}};
+        var pubProjsIm = {{=XML(pubProjectsIm)}};
         var applicationName = {{=XML(appName)}};
         for (var item in authProjs) {
             var outStr = '<a href="/' + applicationName+ '/default/showImages?projectId='+item+'">'+authProjs[item]+'</a>';
+            var image = '<a href="/' + applicationName+ '/default/showImages?projectId='+item+'">'+'<img width="200px" src='+authProjsIm[item] +'/> </a>';
             authArr.push(outStr);
+            authArr.push(image);
         }
         for (var item in unAuthProjs) {
             var outStr = '<a href="/' + applicationName+ '/default/showImages?projectId='+item+'">'+unAuthProjs[item]+'</a>';
+            var image = '<a href="/' + applicationName+ '/default/showImages?projectId='+item+'">'+'<img width="200px" src='+unAuthProjsIm[item] +'/> </a>';
             unAuthArr.push(outStr);
+            unAuthArr.push(image);
         }
         for (var item in pubProjs) {
             var outStr = '<a href="/' + applicationName+ '/default/showImages?projectId='+item+'">'+pubProjs[item]+'</a>';
