--- a/views/default/show.html
+++ b/views/default/show.html
@@ -1,30 +1,30 @@
 {{extend 'layout.html'}}
 {{if image is not None and image.file is not None:}}
-<center> <h1>Image:{{=image.num}} Version:{{=image.version}} {{=image.title}}</h1> </center>
+<center> <h1 style="font-weight:bold;">Image:{{=image.num}} Version:{{=image.version}} {{=image.title}}</h1> </center>
 {{else:}}
-   <center> <h1>Image not set</h1> </center>
+   <center> <h1 style="font-weight:bold;">Image not set</h1> </center>
 {{pass}}
 
-<center>{{=A('Upload',  _href=URL("create",vars=dict(num=num, projectId=projectId)))}}</center>
+<center style="font-size:20px;padding-bottom:20px;">{{=A('Upload Background Picture',  _href=URL("create",vars=dict(num=num, projectId=projectId)),_class='uploadTitle')}}</center>
 <center><div class="tools">
-  <input type="color" id="brushColor" onchange="changeColor(this.value)">
-  <input type="range" value="5"; id="brushSize" min="1" max="25" onchange="changeBrushSize(this.value)">
-  <a href="#canvas" data-tool="marker" data-size="5">Brush</a>
-  <a href="#canvas" data-tool="marker" data-size="3000">Bucket</a>
-  <a href="#canvas" data-tool="eraser">Eraser</a>
-  <button onclick ="downloadPicture()">Download</button>
-  <form onSubmit='saves()' style="display: inline-block">
+    <p><b>Please select brush color:  <b><input type="color" id="brushColor" onchange="changeColor(this.value)"></p>
+        <p><b>Please select brush size:  </b><input type="range" value="5"; id="brushSize" min="1" max="25" onchange="changeBrushSize(this.value)"></p>
+  <a id="brushTool" href="#canvas" data-tool="marker" data-size="5" style="padding-right:10px; font-size:20px;">Brush</a>
+  <a id="bucketTool" href="#canvas" data-tool="marker" data-size="3000" style="padding-right:10px; font-size:20px;">Bucket</a>
+  <a id ="eraserTool"href="#canvas" data-tool="eraser" style="padding-right:10px; font-size:20px;">Eraser</a>
+  <a href onclick ="downloadPicture()" style="padding-right:10px; font-size:20px;">Download</a>
+  <form onSubmit='saves()' style="display: inline-block; font-size:20px;">
   Name of Save:<br>
   <input type="text" name="savename" id="savename"><br>
   </form>
-  <button onclick ="saves()">Save</button>
+  <a href onclick ="saves()" style="padding-right:10px; font-size:20px;">Save</a>
   <div style="display: inline-block">{{=form}}</div>
 </div></center>
 {{if image is not None:}}
  <center> <canvas id="canvas" width= "800" height = "800" class="bordered" style="background-image: url({{=URL('download', args=image.file)}}); display: none;"></canvas> </center>
 <center> <img id ="myImg" width = "800" height = "800" src ="{{=URL('download', args=image.file)}}" style="display:none;" > </center>
 {{else:}}
-    <center> <canvas id="canvas" width= "800" height = "800" class="bordered" style="background-image: url({{=URL('static','images/white.png')}}); display: none;"></canvas> </center>
+    <center> <canvas id="canvas" width= "800" height = "800" class="bordered" style="background-image: url({{=URL('static','images/DrawAPiece.png')}}); display: none;"></canvas> </center>
 <center> <img id ="myImg" width = "800" height = "800" src ="{{=URL('static','images/white.png')}}" style="display:none;" >
 {{pass}}
 
